0.10.0/_sources/developers/coredev/core_dev_guide.md
(core-dev-guide)=

# Core team member guide

Welcome, new core team member! The core team appreciate the quality of
your work, and enjoy working with you; we have therefore invited you
to join us. Thank you for your numerous contributions to the project
so far.

You can see a list of all the current core team members on our
[@napari/core-devs](https://github.com/orgs/napari/teams/core-devs)
GitHub team. You should now be on that list too.

This document offers guidelines for your new role. First and
foremost, you should familiarize yourself with the project's
[mission and values](mission-and-values). When in
doubt, always refer back there.

As a core team member, you gain the responsibility of shepherding
other contributors through the review process; below are some
guidelines for how to do that.

You also gain the responsibility of collaborating with the Steering Council and
the rest of the team in shaping the project's goals and future direction as
aligned with the mission and values. Please read our
[governance](../../community/governance.md) documentation for more information
on our governance process, and the Steering Council's role.

## All contributors are treated the same

As a core team member, you gain the ability to merge or approve other
contributors' pull requests. Much like nuclear launch keys, it is a shared
power: you must merge *only after* another core has approved the pull request,
*and* after you yourself have carefully reviewed it. (See
[Reviewing](#reviewing) and especially
[Merge Only Changes You Understand](#merge-only-changes-you-understand) below.)
It should also be considered best practice to leave a reasonable (24hr) time
window after approval before merge to ensure that other core team members have
a reasonable chance to weigh in.

We are also an international community, with contributors from many different
time zones, some of whom will only contribute during their working hours,
others who might only be able to contribute during nights and weekends. It is
important to be respectful of other peoples schedules and working habits, even
if it slows the project down slightly - we are in this for the long run. In the
same vein you also shouldn't feel pressured to be constantly available or
online, and users or contributors who are overly demanding and unreasonable to
the point of harassment will be directed to our [Code of Conduct](napari-coc).
We value sustainable development practices over mad rushes.

When merging, use GitHub's
[Squash and Merge](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/incorporating-changes-from-a-pull-request/merging-a-pull-request#merging-a-pull-request)
to ensure a clean git history.

You should also continue to make your own pull requests as before and in
accordance with the [general contributor guide](napari-contributing). These
pull requests still require the approval of another core team member before
they can be merged.

## Reviewing

### How to conduct a good review

*Always* be kind to contributors. Contributors are often doing
volunteer work, for which we are tremendously grateful. Provide
constructive criticism on ideas and implementations, and remind
yourself of how it felt when your own work was being evaluated as a
novice.

`napari` strongly values mentorship in code review. New users
often need more handholding, having little to no git
experience. Repeat yourself liberally, and, if you don’t recognize a
contributor, point them to our development guide, or other GitHub
workflow tutorials around the web. Do not assume that they know how
GitHub works (many don't realize that adding a commit
automatically updates a pull request, for example). Gentle, polite, kind
encouragement can make the difference between a new core team member and
an abandoned pull request.

When reviewing, focus on the following:

1. **Usability and generality:** `napari` is a GUI application that strives to
   be accessible to both coding and non-coding users, and new features should
   ultimately be accessible to everyone using the app. `napari` targets the
   scientific user community broadly, and core features should be
   domain-agnostic and general purpose. Custom functionality is meant to be
   provided through our plugin ecosystem. If in doubt, consult back with our
   [mission and values](mission-and-values).

1. **Performance and benchmarks:** As `napari` targets scientific applications
   that often involve large multidimensional datasets, high performance is a
   key value of `napari`. While every new feature won't scale equally to all
   sizes of data, keeping in mind performance and our
   [benchmarks](napari-benchmarks) during a review may be important, and you
   may need to ask for benchmarks to be run and reported or new benchmarks to
   be added.

1. **APIs and stability:** Coding users and plugin developers will make
   extensive use of our APIs. The foundation of a healthy plugin ecosystem will
   be a fully capable and stable set of APIs, so as `napari` matures it will
   very important to ensure our APIs are stable. For now, while the project is
   still in an earlier stage, spending the extra time to consider names of
   public facing variables and methods, along side function signatures, could
   save us considerable trouble in the future. Right now we are still making
   breaking changes with minor version numbers `0.x` and do not have a
   deprecation policy, but we will work to add one soon.

1. **Documentation and tutorials:** All new methods should have appropriate doc
   strings following [PEP257](https://peps.python.org/pep-0257/) and the
   [NumPy documentation guide](https://numpy.org/devdocs/dev/howto-docs.html#documentation-style).
   For API changes, make sure to check that a `.. versionadded::` or
   `.. versionchanged::` directive has been added to the appropriate docstring.
   For any major new features, accompanying changes should be made to our
   [tutorials](tutorials). These should not only illustrate the new feature,
   but explain it. Titles for all documents in napari should follow
   [sentence case capitalization](https://apastyle.apa.org/style-grammar-guidelines/capitalization/sentence-case),
   but the name `napari` should always be written in lowercase.

1. **Implementations and algorithms:** You should understand the code being
   modified or added before approving it. (See
   [Merge Only Changes You Understand](#merge-only-changes-you-understand)
   below.) Implementations should do what they claim and be simple, readable,
   and efficient in that order.

1. **Tests:** All contributions *must* be tested, and each added line of code
   should be covered by at least one test. Good tests not only execute the
   code, but explore corner cases. It can be tempting not to review tests, but
   please do so.

1. **Labels and Milestones:** Make sure you add the appropriate labels and
   milestone to PRs before merging. This should be done both in the main napari
   repo and in the docs repo. Both repos have a CI check, triggered by the
   `ready_to_merge` label, which will fail if the milestone is not set in the
   PR.

Other changes may be *nitpicky*: spelling mistakes, formatting, etc. Do not
insist contributors make these changes, but instead you should offer to make
these changes by
[pushing to their branch](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/committing-changes-to-a-pull-request-branch-created-from-a-fork),
or using GitHub’s
[suggestion](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/reviewing-changes-in-pull-requests/commenting-on-a-pull-request)
[feature](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/reviewing-changes-in-pull-requests/incorporating-feedback-in-your-pull-request),
and be prepared to make them yourself if needed. Using the suggestion feature
is preferred because it gives the contributor a choice in whether to accept the
changes.

Unless you know that a contributor is experienced with git, don’t ask for a
rebase when merge conflicts arise. Instead, rebase the branch yourself,
force-push to their branch, and advise the contributor to force-pull. If the
contributor is no longer active, you may take over their branch by submitting a
new pull request and closing the original, including a reference to the
original pull request. In doing so, ensure you communicate that you are not
throwing the contributor's work away!

### Merge only changes you understand

*Long-term maintainability* is an important concern. Code doesn't
merely have to *work*, but should be *understood* by multiple core
team members. Changes will have to be made in the future, and the
original contributor may have moved on.

Therefore, *do not merge a code change unless you understand it*. Ask
for help freely: we can consult community members, or even external developers,
for added insight where needed, and see this as a great learning opportunity.

While we collectively "own" any patches (and bugs!) that become part
of the code base, you are vouching for changes you merge. Please take
that responsibility seriously.

## Release responsibilities

`napari` ships on a monthly cadence; see the [release policy](napari-release)
for the full process. As a core team member, you are expected to:

- **Own the milestones you set.** The person who adds a milestone to a pull
  request is responsible for driving it to a mergeable state, either by working
  with the PR author to review and approve, or by pushing changes themselves on
  their own PRs or if the original author is unresponsive or unable to continue
  working on the PR.
- **Communicate with the release manager.** If you own open milestoned PRs you
  must regularly communicate their status to the release manager after the
  first alpha has been released, and work with them to get the PR merged.
- **Justify highlights.** If you add the `highlight` label to a pull request,
  provide the motivation plus a draft highlight note and any required images or
  videos, so the release manager does not have to re-review already-merged PRs.
- **Respect the release timeline.** Features and enhancements must be ready
  before the first release candidate; documentation, bug fixes, and maintenance
  may merge during the rc phase. A feature that misses a release ships a month
  later — it should not be a reason to delay a release.
- **Be aware of your PR's dependencies.** Sometimes your PR requires auxiliary
  changes in other repos, e.g. napari-plugin-manager, napari-metadata, etc.,
  before napari can be released. Make a conscious effort when close to release
  to identify such dependencies and communicate them on the PR, and explicitly
  to the release manager. Account for these in your estimates of how long it
  will take to get the PR/feature fully ready for release.

## Documentation and website

For details on how the documentation and website are built, see
[](docs-deployment).

## Further resources

As a core member, you should be familiar with the following napari guides:

### Community guides

- Our [code of conduct](napari-coc).
- Our [governance](napari-governance).
- Our [mission and values](mission-and-values).

### Technical guides

- Our [contributor guide](napari-contributing).
- Our [benchmarking guide](napari-benchmarks).
- Our [triage guide](napari-triage).
- Our [release policy](napari-release).
- Our [release guide](napari-release-guide) (release mechanics).
- Our [maintenance guide](maintenance).
- Our [packaging guide](napari-packaging).

### Style guides

- [PEP8](https://peps.python.org/pep-0008/) for Python style.
- [PEP257](https://peps.python.org/pep-0257/) and the
  [NumPy documentation guide](https://numpy.org/devdocs/dev/howto-docs.html#documentation-style)
  for docstring conventions.
- [`prek`](https://prek.j178.dev/) hooks for autoformatting.
- [`ruff-format`](https://docs.astral.sh/ruff/formatter/) autoformatting.
- [`ruff`](https://github.com/astral-sh/ruff) linting.

### Social resources

- [#napari on image.sc](https://forum.image.sc/tag/napari).
- [#napari](https://fosstodon.org/tags/napari) and
  [@napari@fosstodon.org](https://fosstodon.org/@napari) on mastodon.
- [napari zulip](https://napari.zulipchat.com/) community chat channel.

You are not required to monitor the social resources.

Where possible we prefer to point people towards asynchronous forms of
communication like forum posts and github issues instead of realtime chat
options as they are easier for a global community to consume.

We also have a private mailing list for core team members
`napari-core-devs@googlegroups.com` which is sparingly used for discussions
that are required to be private, such as voting on new core members.

## Inviting new core members

Any core member may nominate other contributors to join the core team. While
there is no hard-and-fast rule about who can be nominated, ideally, they should
have: been part of the project for at least two months, contributed significant
changes of their own, contributed to the discussion and review of others' work,
and collaborated in a way befitting our community values. Beyond the number of
contributions, we value the *depth* of a nominee's interaction with the project
— whether that is depth of usage (e.g. as a researcher or user), depth of
contribution, or depth of understanding of maintenance. After nomination voting
will happen on a private mailing list. While it is expected that most votes
will be unanimous, a two-thirds majority of the cast votes is enough.

Core team members can choose to become emeritus core team members and suspend
their approval and voting rights until they become active again. Emeritus core
team members can request **or** be invited to become active core team members
at a later date, and active core team members will vote on this status-change
as above. Core team members must reaffirm their membership every January. Core
team members who do not reaffirm their membership will automatically become
emeritus.

## Expulsion of core team members

Any core team member or SC member can request the explusion of a core team
member whom they believe has acted in a manner contrary to the project's
mission and values. This may be done by approaching an SC member, who is then
responsible for calling a vote and managing the process, as detailed below.
Written notice of the proposed expulsion must be given to the member at least
21 days before a vote is held. As soon as a removal request has been made, the
member's permissions will be reduced to prohibit destructive actions on
relevant platforms. Before the vote, the member must be given reasonable
opportunity to appeal. The member will be expelled if the vote, by secret
ballot, of the core team members and Steering Council achieves a 75% majority.
An expelled member may not be readmitted unless a vote for readmission, by
secret ballot, of the core team members and Steering Council achieves a 75%
majority.

## Contribute to this guide (!)

This guide reflects the experience of the current core team members. We
may well have missed things that, by now, have become second
nature—things that you, as a new team member, will spot more easily.
Please ask the other core team members if you have any questions, and
submit a pull request with insights gained.

## Conclusion

We are excited to have you on board! We look forward to your
contributions to the code base and the community. Thank you in
advance!
